--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "next-template",
   "version": "0.1.0",
   "private": true,
- "scripts": {
+  "scripts": {
     "dev": "next dev",
-    
     "start": "next start",
     "build": "next build && next export",
     "export": "next export",
@@ -51,6 +50,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
@@ -60,7 +60,6 @@
     "zod": "^3.25.28"
   },
   "devDependencies": {
-   
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
